<resources>
    <string name="app_name">Qui Veut Gagner Des Millions</string>
    <string name="main_question">Qui veut gagner des Millions ?</string>
    <string name="start">Commencer</string>
    <string name="add">Ajouter une question</string>
    <string name="store">Store</string>
    <string name="about">A propos</string>
    <string name="quit">Quitter</string>
    <string name="pop_title">Vous êtes sur de vouloir quitter?</string>
    <string name="pop_yes">Oui</string>
    <string name="pop_no">Non</string>
    <string name="back">Revenir au menu</string>
    <string name="about_text">CEAICOVSHCI Ivan 2i1</string>
    <string name="del_score">Supprimer les scores</string>
    <string name="realy_quit">Vous etes sur de voulour quitter? Vous allez perdre votre score!</string>
    <string name="store_buy">Acheter</string>
    <string name="store_live">+1 vie</string>


</resources>
